# local-ai-agent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.yaml  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
agent/: coding_cli.py  config.py  events.py  foreground.py  governor.py  llm.py  main.py  menu.py  panel.py  plugins.py  safety.py  settings.py  tui.py  worker_status.py
agent/coding/: repair.py  repomap.py  session.py  workspace.py
agent/context/: budget.py  compact.py  truncate.py
agent/memory/: distill.py  environment.py  recall.py  reembed.py  store.py  vectors.py
assets/: demo.cast  web-demo.cast
companion/: config.py  foreground.py  governor.py  jsonx.py  llm.py  main.py  menu.py  panel.py  settings.py  tui.py  worker_status.py
evals/: harness.py  stats.py
tests/: conftest.py  test_coding_checks.py  test_coding_cli.py  test_coding_guards.py  test_coding_runner.py  test_config.py  test_context_budget.py  test_context_compact.py  test_context_truncate.py  test_correction_search.py  test_distill.py  test_distill_prompt.py  test_edit_apply.py  test_edit_format.py  test_environment.py  test_evals.py  test_events.py  test_files_tool.py  test_gate.py  test_governor.py  test_integration.py  test_jsonx.py  test_llm.py  test_main.py  test_memory_repair.py  test_menu.py  test_non_utf8_names.py  test_plugins.py  test_recall.py  test_reembed.py  test_registry.py  test_repair.py  test_repomap.py  test_report.py  test_reviewer.py  test_safety.py  test_session.py  test_settings.py  test_shell_tool.py  test_skills_loader.py  (+9 more)
(+27 files in other folders)
