[project]
name = "agent"
version = "0.1.0"
description = "Fully-local AI agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "rich>=13.9",
    "pyyaml>=6.0",
    "httpx>=0.28",
    "sqlite-vec>=0.1.9",
]

[project.scripts]
agent = "agent.main:app"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
    "coverage>=7.6",
]

[tool.pytest.ini_options]
markers = [
    "integration: hits a real local Ollama; excluded by default",
]
addopts = "-m 'not integration'"
testpaths = ["tests"]
